# A2AiForGamesProgramming

./: .gitignore  CMakeLists.txt  README.md  README.txt
include/core/: Common.h  DebugLogger.h  Grid.h  Pch.h
include/file-io/: AiLoader.h  FileExplorer.h  FileIoCommon.h  MazeLoader.h
include/pathfinding/: Pathfinding.h
include/q-learning/: Agent.h  Environment.h  QlHelpers.h  QlPathFinder.h
include/renderer/: GridMesh.h  RendererSystem.h  Shader.h
res/: symbol.txt
res/ai/: TueJan4192033202216413240330031405.txt  TueJan4192148202216413241083614190.txt  TueJan4192425202216413242653761564.txt  TueJan4192936202216413245761466403.txt  TueJan4193449202216413248890629142.txt
res/mazes/: TerrainFile1.txt  TerrainFile3.txt  TerrainFile4.txt  TerrainFile5.txt  TerrainFile6.txt  TerrainFile7.txt  TerrainFile8.txt
res/shaders/: Grid.shader
res/test-data/: results.txt
src/: Main.cpp
src/core/: Common.cpp  Core.cpp  Core.h  DebugLogger.cpp  Grid.cpp  Scene.cpp  Scene.h
src/file-io/: AiLoader.cpp  FileExplorer.cpp  FileIoCommon.cpp  MazeLoader.cpp
src/q-learning/: Agent.cpp  Environment.cpp  QlPathFinder.cpp
src/renderer/: GridMesh.cpp  RendererSystem.cpp  Shader.cpp
